# solaris-kernels

./: .gitignore  DEMO_SUMMARY.md  README.md  pyproject.toml
agents/: agent_prompt.md  solaris_agent_prompt.md
edge/: README.md
edge/kvcraft-vae-metal-decoder/: Package.swift  README.md
edge/kvcraft-vae-metal-decoder/Docs/: ARCHITECTURE.md  EDGE_INFERENCE_OPTIMIZATIONS.md  VALIDATION.md
edge/solaris-vae-metal-decoder/: Package.swift  README.md
harness/: README.md  measure_solaris.sh  profile_solaris.sh
harvest/: README.md  hooks.py
kernels/: adaln_fused_cute.py
knowledge/: bottlenecks.md  framework_decision.md  loop_state.md
knowledge/episodes/: 2026-06-20-SERVER-AT-TARGET.md  2026-06-20-WIN-cudnn923-vae-conv.md  2026-06-20-camera-banding-b300-validation.md  2026-06-20-mac-edge-vae-metal-decoder.md  2026-06-20-profiler-wired-roofline.md  2026-06-20-solaris-b300-first-run-findings.md  2026-06-20-solaris-profile-vae-conv-dominates.md  2026-06-20-solaris-real-arch-cudnn-lever.md  2026-06-20-split-serving-protocol.md
knowledge/semantic/: hardware_sm90.md  model_facts.md  port_strategy.md  research_sources.md  split_serving_architecture.md
lighter_vae/: README.md  distill.py  student.py
problems/adaln_modulation/: problem.yaml
problems/stdit_attention/: problem.yaml
problems/vae_decode/: problem.yaml
results/: gains.csv  plot_gains.py
scripts/: loop.sh  monitor.sh  solaris_loop.sh
src/oasis_forge/: __init__.py  cli.py  config.py  gate.py  ledger.py  remote.py  roofline.py  streaming.py
tests/: test_gate.py  test_roofline.py  test_streaming.py
(+34 files in other folders)
